--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "compression": "^1.7.1",
     "polka": "next",
     "sirv": "^1.0.0",
-    "svelte-awesome": "^2.3.0"
+    "svelte-awesome": "^2.3.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "sapper": "^0.28.0",
